# note-nomi

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: f1-oracle.txt  f2-quality.txt  f3-qa.txt  f4-scope.txt  task-10-biome.txt  task-10-tests.txt
.sisyphus/notepads/git-commit-bugfix/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/note-kind-views/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: note-kind-views.md
app/: analysis_worker.py  app_state.py  config.py  extra_routes.py  job_runner.py  kakaotalk_parser.py  main.py  note_kinds.py  service.py  storage.py
app/static/: index.html
docs/: implementation-next-step.md  instagram-browser-automation.md  mvp-wireframe-schema-api.md
tests/: test_api.py  test_note_kinds.py  test_service.py
