[project]
name = "note-nomi"
version = "0.1.0"
description = "Lightweight AI note web project starter"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "pydantic==2.11.7",
  "httpx==0.28.1",
  "python-multipart>=0.0.22",
]

[project.optional-dependencies]
instagram-browser = ["playwright>=1.40"]

[tool.uv]
dev-dependencies = []
